<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.meia.MainActivity" >
    
	<item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_search_icon"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_booking"
        android:icon="@drawable/ofm_booking_icon"
        android:title="@string/action_booking"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ofm_qrcode_icon"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ofm_bookmark_icon"
        android:title="@string/action_bookmark"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ofm_feedback_icon"
        android:title="@string/action_feedback"/>

</menu>
