<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <Button
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="1dp"
        android:text="@string/discover_button_message"
        android:onClick="onClick"
        android:textSize="11sp"
        android:background="@drawable/shape" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20.0dip"
        android:gravity="center"
        android:text="@string/discover_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20.0dip"
        android:gravity="center"
        android:text="@string/discover_subtitle" />

    <Button
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="1dp"
        android:text="@string/discover_button_call"
        android:onClick="onClick"
        android:textSize="11sp"
        android:background="@drawable/shape"  />

</FrameLayout>