<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
        android:onClick="onClick"
        android:drawableTop="@drawable/button_search"
        android:text="@string/home_button_category"
        android:textSize="11sp"
        android:textColor="@color/title_action_text"
        android:button="@null"
        android:background="@color/title_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20.0dip"
        android:gravity="center"
        android:text="@string/home_title" 
        android:textSize="25sp"
        android:textColor="@color/title_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20.0dip"
        android:gravity="center"
        android:text="@string/home_subtitle"
	    android:textSize="11sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="0dp"
		android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:drawableTop="@drawable/button_message"
	    android:text="@string/home_button_message"
	    android:textSize="11sp"
        android:textColor="@color/title_action_text"
        android:button="@null"
        android:background="@color/title_background"/>

</FrameLayout>