<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:meia="http://schemas.android.com/apk/res/com.meia"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal" >

        <com.meia.activity.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            meia:icon="@drawable/tab_home_pressed"
            meia:text="@string/tab_home"
            meia:text_size="12sp" />

        <com.meia.activity.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            meia:icon="@drawable/tab_discover_pressed"
            meia:text="@string/tab_discover"
            meia:text_size="12sp" />

        <com.meia.activity.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            meia:icon="@drawable/tab_buy_pressed"
            meia:text="@string/tab_buy"
            meia:text_size="12sp" />

        <com.meia.activity.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            meia:icon="@drawable/tab_personal_pressed"
            meia:text="@string/tab_personal"
            meia:text_size="12sp" />
    </LinearLayout>

</LinearLayout>